# lc_specific_speckle_analysis

./: .gitignore  README.md  cache_all_patches.py  create_patches_gpkg.py  create_training_summary.py  debug_overlap_raw.py  nohup.out  notrain.out  pyproject.toml  run_training.py  test_pickle_cache.py  train_all_configs.py  train_all_configs.sh  train_all_configs_parallel.sh  train_parallel_python.py  training_summary_all_configs.csv
configs/: config_base.conf  config_base_mean.conf  config_base_quantiles.conf  config_base_shuffled.conf  config_base_std.conf  config_base_stdandmean.conf  config_normalized.conf  config_normalized_mean.conf  config_normalized_quantiles.conf  config_normalized_shuffled.conf  config_normalized_std.conf  config_normalized_stdandmean.conf  config_quantiles.conf  config_shuffled.conf  config_shuffled_normalized.conf  config_shuffled_zeromean.conf  config_shuffled_zeromean_normalized.conf  config_zeromean.conf  config_zeromean_mean.conf  config_zeromean_normalized.conf  config_zeromean_normalized_mean.conf  config_zeromean_normalized_quantiles.conf  config_zeromean_normalized_shuffled.conf  config_zeromean_normalized_std.conf  config_zeromean_normalized_stdandmean.conf  config_zeromean_quantiles.conf  config_zeromean_shuffled.conf  config_zeromean_std.conf  config_zeromean_stdandmean.conf  generated_configs_summary.txt
data/: config.conf
debug/: debug_patch_extraction.py  debug_rasterio_raw.py  debug_yield_batch_exact.py
results/: Summary_speckle_pattern_question.pptx  configuration_combinations_summary.md  performance_analysis_summary.md  technical_summary.md
scripts/: analyze_buffering.py  analyze_performance.py  cache_all_patches.py  check_satellite_crs.py  export_aois.py  (+12 more)
(+25 files in other folders)
